--- a/port-map.html
+++ b/port-map.html
@@ -6,6 +6,7 @@
 
 <title>Port Map</title>
 <style>
+  html, body, #stage, svg { touch-action: none; }
   html,body{margin:0;height:100%}
   #stage{position:relative;width:100vw;height:100svh;overflow:hidden;background:#49aeb6}
   svg{width:100%;height:100%;display:block;touch-action:none;user-select:none}
@@ -331,146 +332,174 @@ document.getElementById('zoomOut').onclick=()=>{userInteracted=true;zoomBy(0.87)
  
 
 /* ===== Pan 1 ngón: giống code cũ, nhưng robust hơn trên mobile ===== */
- const PAN_DAMPING = 0.0012;   // ma sát nhẹ hơn → trôi mượt
-const PAN_MIN_SPEED = 0.015;  // tốc độ ngưỡng dừng
-const FRAME_MAX = 32;         // clamp dt
+ const FRAME_MAX = 24;
+const PAN_DAMPING = 0.00085;
+const PAN_MIN_SPEED = 0.005;
 
-/* ===== STATE ===== */
-let userInteracted=false;
-let dragging=false, lockDrag=false;
-let lastX=0, lastY=0;
-let vx=0, vy=0;
-let flingId=null;
+const BOOST_TOUCH_DRAG    = 1.25;
+const BOOST_TOUCH_RELEASE = 1.8;
+const BOOST_MOUSE_DRAG    = 1.00;
+const BOOST_MOUSE_RELEASE = 1.00;
 
-function stopFling(){ if(flingId){ cancelAnimationFrame(flingId); flingId=null; } }
+const VEL_WINDOW_MS = 120;
+
+/* ===== State ===== */
+let dragging = false, lockDrag = false;
+let lastX = 0, lastY = 0, lastT = 0;
+let vx = 0, vy = 0, flingId = null;
+
+const velHist = []; // {vx, vy, dt, t}
+
+function stopFling(){ if (flingId){ cancelAnimationFrame(flingId); flingId = null; } }
 function startFling(){
   stopFling();
-  const t0=performance.now();
-  function step(t){
-    const dt=Math.min(FRAME_MAX, t-(step.last||t0)); step.last=t;
-    const k=Math.exp(-PAN_DAMPING*dt);
-    vx*=k; vy*=k;
-    tx+=vx*dt; ty+=vy*dt;
+  let prev = performance.now();
+  function step(now){
+    const dt = Math.min(FRAME_MAX, now - prev); prev = now;
+    const k = Math.exp(-PAN_DAMPING * dt);
+    vx *= k; vy *= k;
+    tx += vx * dt; ty += vy * dt;
     apply();
-    if(Math.hypot(vx,vy)>PAN_MIN_SPEED) flingId=requestAnimationFrame(step);
-    else flingId=null;
+    if (Math.hypot(vx,vy) > PAN_MIN_SPEED) flingId = requestAnimationFrame(step);
+    else flingId = null;
   }
-  flingId=requestAnimationFrame(step);
+  flingId = requestAnimationFrame(step);
 }
 
-/* ===== rAF throttle cho pan ===== */
+function pushVelocity(instVx, instVy, dt, t){
+  velHist.push({vx:instVx, vy:instVy, dt, t});
+  const cutoff = t - VEL_WINDOW_MS;
+  while (velHist.length && velHist[0].t < cutoff) velHist.shift();
+}
+function weightedVelocity(){
+  if(!velHist.length) return {vx:0, vy:0};
+  const tMax = velHist[velHist.length-1].t;
+  let sx=0, sy=0, sw=0;
+  for(const s of velHist){
+    const age = tMax - s.t;
+    const w = 1 - (age / VEL_WINDOW_MS);
+    sx += s.vx * w; sy += s.vy * w; sw += w;
+  }
+  return sw ? {vx:sx/sw, vy:sy/sw} : {vx:0, vy:0};
+}
+
+/* ===== Pan via rAF (mượt) ===== */
 let panQueued=false, panDX=0, panDY=0;
 function queuePan(dx,dy){
-  panDX+=dx; panDY+=dy;
-  if(panQueued) return;
-  panQueued=true;
+  panDX += dx; panDY += dy;
+  if (panQueued) return;
+  panQueued = true;
   requestAnimationFrame(()=>{
-    tx+=panDX; ty+=panDY;
+    tx += panDX; ty += panDY;
     apply();
-    // velocity EMA để fling
-    const dt=16; const wx=panDX/dt, wy=panDY/dt;
-    vx=vx*0.8+wx*0.2; vy=vy*0.8+wy*0.2;
-    panDX=0; panDY=0; panQueued=false;
+    panDX = 0; panDY = 0;
+    panQueued = false;
   });
 }
 
-/* ===== Pinch (incremental) đúng tâm chạm ===== */
-const pts=new Map();
-let pinching=false;
-let pinchPrevDist=0;
-let pinchAnchorWorld={x:0,y:0};
+/* ===== Pinch-zoom 2 ngón (incremental) ===== */
+const pts = new Map();
+let pinching = false;
+let pinchPrevDist = 0;
 
-function dist(a,b){const dx=a.clientX-b.clientX, dy=a.clientY-b.clientY; return Math.hypot(dx,dy);}
-function mid(a,b){return {x:(a.clientX+b.clientX)/2, y:(a.clientY+b.clientY)/2};}
+function dist(a,b){ const dx=a.clientX-b.clientX, dy=a.clientY-b.clientY; return Math.hypot(dx,dy); }
+function mid(a,b){ return {x:(a.clientX+b.clientX)/2, y:(a.clientY+b.clientY)/2}; }
 
-/* mỗi frame xử lý pinch một lần để mượt */
 let pinchQueued=false;
 function processPinch(){
-  if(pinchQueued || !pinching || pts.size!==2) return;
-  pinchQueued=true;
+  if (pinchQueued || !pinching || pts.size!==2) return;
+  pinchQueued = true;
   requestAnimationFrame(()=>{
-    pinchQueued=false;
-    const [a,b]=[...pts.values()];
-    const d=dist(a,b); if(d<=0) return;
+    pinchQueued = false;
+    const [a,b] = [...pts.values()];
+    const d = dist(a,b); if(d<=0) return;
 
-    const r=svg.getBoundingClientRect();
-    const m=mid(a,b);
-    const mx=m.x - r.left, my=m.y - r.top;
+    const r = svg.getBoundingClientRect();
+    const m = mid(a,b);
+    const mx = m.x - r.left, my = m.y - r.top;
 
-    // scale gia tăng: dùng tỉ lệ với khoảng cách KHÔNG so với start mà so với previous
-    const desired = Math.max(MIN, Math.min(MAX, scale*(d/pinchPrevDist)));
+    const raw = scale * (d / pinchPrevDist);
+    const maxStep = 1.06, minStep = 1/maxStep;        // hạn chế bước để mượt
+    const limited = Math.max(minStep, Math.min(maxStep, raw/scale));
+    const ns = Math.max(MIN, Math.min(MAX, scale * limited));
 
-    // neo: dùng world point ngay tại midpoint HIỆN TẠI (trước khi đổi scale)
     const world = clientToSvgPoint(m.x, m.y);
-
-    scale = desired;
-    tx = mx - world.x*scale;
-    ty = my - world.y*scale;
+    scale = ns;
+    tx = mx - world.x * scale;
+    ty = my - world.y * scale;
     apply();
 
-    pinchPrevDist = d; // cập nhật mốc đo cho frame tiếp
+    pinchPrevDist = d;
   });
 }
 
-/* ===== HANDLERS ===== */
-svg.addEventListener('pointerdown',(e)=>{
+/* ===== Handlers ===== */
+svg.addEventListener('pointerdown', (e)=>{
   e.preventDefault();
-  userInteracted=true;
 
-  // thêm pointer vào set (cho pinch)
+  // pinch collect
   pts.set(e.pointerId, {pointerId:e.pointerId, clientX:e.clientX, clientY:e.clientY});
-
-  // nếu đang có đúng 2 ngón → vào pinch mode (không pan)
-  if(pts.size===2){
+  if (pts.size === 2){
     const [a,b]=[...pts.values()];
-    pinching=true;
-    dragging=false;
-    pinchPrevDist=dist(a,b);
-    const m=mid(a,b);
-    pinchAnchorWorld = clientToSvgPoint(m.x, m.y); // dùng khi cần, nhưng ta tính lại mỗi frame bằng world hiện tại
+    pinching = true;
+    dragging = false;
+    pinchPrevDist = dist(a,b);
     return;
   }
 
-  // nếu chạm vào đối tượng tương tác thì không pan
+  // pan guard
   lockDrag = !!e.target.closest('.ship, .berth, .crane, .hit');
-  if(lockDrag) return;
+  if (lockDrag) return;
+  if (e.isPrimary === false) return;
 
-  // pan 1 ngón
   stopFling();
-  dragging=true;
-  lastX=e.clientX; lastY=e.clientY;
-},{passive:false});
+  dragging = true;
+  lastX = e.clientX; lastY = e.clientY; lastT = e.timeStamp || performance.now();
+  velHist.length = 0;
+}, {passive:false});
 
-svg.addEventListener('pointermove',(e)=>{
-  // cập nhật vị trí pointer cho pinch
-  if(pts.has(e.pointerId)){
+svg.addEventListener('pointermove', (e)=>{
+  if (pts.has(e.pointerId)){
     pts.set(e.pointerId, {pointerId:e.pointerId, clientX:e.clientX, clientY:e.clientY});
   }
 
-  if(pinching && pts.size===2){
-    processPinch();
-    return;
-  }
+  if (pinching && pts.size===2){ processPinch(); return; }
 
-  if(!dragging || lockDrag) return;
+  if (!dragging || lockDrag) return;
   e.preventDefault();
-  const dx=e.clientX-lastX, dy=e.clientY-lastY;
-  lastX=e.clientX; lastY=e.clientY;
-  queuePan(dx,dy);
-},{passive:false});
+
+  const now = e.timeStamp || performance.now();
+  let dt = now - lastT; if(dt<1) dt=1; if(dt>FRAME_MAX) dt=FRAME_MAX;
+  const dx = e.clientX - lastX;
+  const dy = e.clientY - lastY;
+
+  const dragBoost = (e.pointerType==='touch') ? BOOST_TOUCH_DRAG : BOOST_MOUSE_DRAG;
+  queuePan(dx * dragBoost, dy * dragBoost);
+
+  const instVx = (dx * dragBoost) / dt;
+  const instVy = (dy * dragBoost) / dt;
+  pushVelocity(instVx, instVy, dt, now);
+
+  lastX = e.clientX; lastY = e.clientY; lastT = now;
+}, {passive:false});
 
 function endPtr(e){
   pts.delete(e.pointerId);
-  if(pinching && pts.size<2){ pinching=false; }
-  if(dragging){
-    dragging=false;
-    if(!lockDrag){
-      const boost=(e.pointerType==='touch')?1.25:1.0;
-      vx*=boost; vy*=boost;
-      if(Math.hypot(vx,vy)>PAN_MIN_SPEED) startFling();
+  if (pinching && pts.size<2) pinching=false;
+
+  if (dragging){
+    dragging = false;
+    const avg = weightedVelocity();
+    if (e.pointerType==='touch'){
+      vx = avg.vx * BOOST_TOUCH_RELEASE;
+      vy = avg.vy * BOOST_TOUCH_RELEASE;
+    }else{
+      vx = avg.vx * BOOST_MOUSE_RELEASE;
+      vy = avg.vy * BOOST_MOUSE_RELEASE;
     }
+    if (Math.hypot(vx,vy) > PAN_MIN_SPEED) startFling();
   }
-  lockDrag=false;
+  lockDrag = false;
 }
 svg.addEventListener('pointerup', endPtr, {passive:true});
 svg.addEventListener('pointercancel', endPtr, {passive:true});
@@ -478,19 +507,21 @@ svg.addEventListener('pointerleave', endPtr, {passive:true});
 svg.addEventListener('pointerout', endPtr, {passive:true});
 
 /* ===== Wheel zoom (desktop) ===== */
-svg.addEventListener('wheel',(e)=>{
+svg.addEventListener('wheel', (e)=>{
   e.preventDefault();
-  userInteracted=true;
-  const r=svg.getBoundingClientRect();
-  const cx=r.left+r.width/2, cy=r.top+r.height/2;
-  const world=clientToSvgPoint(cx,cy);
-  const f = e.deltaY>0?0.9:1.1;
-  const ns = Math.max(MIN, Math.min(MAX, scale*f));
-  tx = (cx - r.left) - world.x*ns;
-  ty = (cy - r.top ) - world.y*ns;
+  const r = svg.getBoundingClientRect();
+  const cx = r.left + r.width/2;
+  const cy = r.top  + r.height/2;
+  const world = clientToSvgPoint(cx, cy);
+
+  const f  = (e.deltaY>0) ? 0.9 : 1.1;
+  const ns = Math.max(MIN, Math.min(MAX, scale * f));
+
+  tx = (cx - r.left) - world.x * ns;
+  ty = (cy - r.top ) - world.y * ns;
   scale = ns;
   apply();
-},{passive:false});
+}, {passive:false});
 
 // const activePtrs = new Map();
 // let isPinching = false;
